--- a/kafka-connect-s3/src/test/resources/log4j.properties
+++ b/kafka-connect-s3/src/test/resources/log4j.properties
@@ -14,10 +14,14 @@
 # limitations under the License.
 #
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c:%L)%n
 
-log4j.logger.org.apache.kafka=ERROR
+log4j.logger.org.reflections=ERROR
+log4j.logger.org.apache.kafka.common.metrics=ERROR
+log4j.logger.kafka.log=ERROR
+log4j.logger.org.apache.zookeeper=ERROR
+log4j.logger.com.amazon=TRACE
