--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,9 @@
     </modules>
 
     <properties>
-        <confluent.version>3.3.0-SNAPSHOT</confluent.version>
-        <kafka.version>0.11.0.0-SNAPSHOT</kafka.version>
+        <confluent.version>3.2.0</confluent.version>
+        <kafka.version>0.10.2.0</kafka.version>
+        <scala.version>2.11</scala.version>
         <jackson.version>2.8.5</jackson.version>
         <junit.version>4.12</junit.version>
         <easymock.version>3.4</easymock.version>
@@ -75,6 +76,30 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_${scala.version}</artifactId>
+            <version>${kafka.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>connect-runtime</artifactId>
+            <version>${kafka.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-client</artifactId>
+            <version>8.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>3.0.3</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-api</artifactId>
